# pyarcade-games

./: .gitignore  README.md  main.py  pic.txt  pyproject.toml  requirements.md  requirements.text
games_data/: saves.py
pyarcade_games/: hangman.py  pylearn.py  quiz_game.py  save_data.py  scores_menu.py  snake_game.py
tests/: test_hangman.py  test_pyarcade_games.py  test_pylearn.py  test_quiz_game.py  test_save_data.py  test_snake.py
