[tool.poetry]
name = "pyarcade-games"
version = "0.1.0"
description = ""
authors = ["Jehad Abu Awwad <jehadabuawwad@outlook.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
black = "^21.10b0"
flake8 = "^4.0.1"
readchar = "^3.0.4"
pyfiglet = "^0.8.post1"
PyInquirer = "^1.0.3"
termcolor = "^1.1.0"

getch = "^1.0"
pyinstaller = "^4.6"
pynput = "^1.7.4"
evdev = "^1.4.0"
keyboard = "^0.13.5"
PyAutoGUI = "^0.9.53"
"cs.tty" = "^20210316"
playsound = "^1.3.0"

colorama = "^0.4.4"
pytest = "^6.2.5"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
